--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+	<div class = "top-nav">
+		<% if logged_in? %>
+		<a href="/session/logout"><p>Logout</p></a>
+		<%end%>
 <%= yield %>
 
 </body>
