--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,34 +10,10 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require foundation
  *= require_tree .
  *= require_self
  */
+
 @import "foundation_and_overrides";
-
-.top-nav {
-  background-color: black;
-  /*text-decoration: none;*/
-  display: block;
-  margin: auto;
-  color: white;
-  height: 55px;
-  width: 100%;
-  top: 0;
-  padding: 8px 0px;
-  position: fixed;
-  /*overflow: hidden;*/
-  font-family: Verdana;
-  z-index: 999;
-}
-
-.top-nav p {
-  text-align: right;
-  position: fixed;
-  top: 9px;
-  right: 0px;
-  text-decoration: none;
-  color: white;
-  font-size: 1.5em;
-  margin: 2px 19px;
-}
+/* Add imports of custom sass/scss files here */
