--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SkeletonWithFoundation</title>
+  <title>NewSmsApp</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag "vendor/modernizr" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-	<p class="flash"><%= flash.notice %></p>
-	<%= yield %>
+	<% if logged_in? %>
+		<a href="/session/logout"><p>Logout</p></a>
+	<%end%>
+<%= yield %>
 
 </body>
 </html>
