--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,11 +1,24 @@
 <p>Hello, <%=current_user.username%></p>
 
-<div>
+<table>
+	<tr>
+		<th>Title</th>
+		<th colspan="2"></th>
+	</tr>	
 
 	<% @tasks.each do |task| %>
-	<li> <%= task.title.capitalize %>   </li>
+	<tr>
+	  <td><%= task.title.capitalize %></td>
+	  <td><%= link_to 'Show', user_task_path(@user,task)%></td>
+	  <td><%= link_to 'Edit', edit_user_task_path(@user,task) %></td>
+	  <td><%= link_to 'Destroy', user_task_path(@user, task),
+                    method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	</tr>
 	<%end%>
+</table>
 
-</div>
+
 
 <%= link_to 'New task', new_user_task_path(@user)%>
+
+<!-- link_to user_task_path(@user) -->
