--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,18 +6,19 @@
   <link rel="stylesheets" href="bootstrap.css">
   <link rel="stylesheets" href="bootstrap.min.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
-    <!-- Bootstrap -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <%= javascript_include_tag "vendor/modernizr" %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
 
 	<% if logged_in? %>
 		<a href="/session/logout"><p>Logout</p></a>
 	<%end%>
+  <nav class="top-bar" data-topbar role="navigation" data-options="is_hover: false">
 <%= yield %>
 
 </body>
