--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,24 +1,44 @@
- <ul>
+<div class = "sign-in"> 
+<form>
+<div class="row">
+  <div class="small-3 columns">
+ 
     <%= form_for(:user, :url => {:controller => 'session', :action => 'login'}) do |f|%>
-        <li><%= f.email_field :email, :size => 70, placeholder: 'Email' %></li>
-        <li><%= f.password_field :password, :size => 70, placeholder: 'Password' %></li>
+        <%= f.email_field :email, :size => 70, placeholder: 'Email' %>
+        <%= f.password_field :password, :size => 70, placeholder: 'Password' %>
           <% flash.each do |name, msg| %>
           <%= content_tag :div, msg, class: name %>
           <% end %>
                 <br>
-          <button class="btn btn-primary btn-block" id="login_button">Log in</button>
+          <button class="button">Log in</button>
           <% end %>
-</ul>
-<ul >
+</div>
+</div>
+</form>
+</div>
+
+<div class = "signupbutton">
+<button class="button" id="sign_in">Sign up</button>
+</div>  
+
+<div class = "sign-up"> 
+
+<form>
+  <div class="row">
+    <div class="small-3 columns">
+
  <%= form_for(:user, :url => {:controller => 'user', :action => 'create'}) do |f|%>
-    <li><%= f.text_field :username, :size => 70, placeholder: 'Username' %></li>
-    <li><%= f.text_field :phone, :size => 70, placeholder: 'phone' %></li>
-    <li><%= f.email_field :email, :size => 70, placeholder: 'Email' %></li>
-    <li><%= f.password_field :password, :size => 70, placeholder: 'Password' %></li>
-    <li><%= f.password_field :password_confirmation, :size => 70, placeholder: 'Confim Password' %></li>
+    <%= f.text_field :username, :size => 70, placeholder: 'Username' %>
+    <%= f.text_field :phone, :size => 70, placeholder: 'phone' %>
+    <%= f.email_field :email, :size => 70, placeholder: 'Email' %>
+    <%= f.password_field :password, :size => 70, placeholder: 'Password' %>
+    <%= f.password_field :password_confirmation, :size => 70, placeholder: 'Confim Password' %>
     <% flash.each do |name, msg| %>
           <%= content_tag :div, msg, class: name %>
           <% end %>
-    <button class="btn btn-primary btn-block" id="signup_enter">Sign up</button>
+    <button class="button">Sign up</button>
     <% end %>
-</ul>
+  </div>
+</div>
+</form>
+</div>
