--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,18 @@
  *= require_self
  *= require foundation
  */
+.body{
+	background: whitesmoke;
+}
+
+
+
+ .front_page_image {	
+ 	background-image: url("front_page.jpg");
+ 	width: 500px;
+ 	height: 320px;
+ 	margin-left: 500px;
+ }
 
 .sign-in{
 	margin-top: 50px;
@@ -27,6 +39,20 @@
 }
 
 .signupbutton{
-	margin-left: 10px;
+	margin-top: 50px;
+	padding-top: 7px;
+	padding-left: 14px;
 	
 }
+
+
+
+.top-nav h1 {
+  text-align: left;
+  margin: 0px 10px;
+  color: ghostwhite;
+}
+
+
+
+
