--- a/app/views/task/new.html.erb
+++ b/app/views/task/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New task for <%=current_user.username%></h1>
-
+<div class="small-3 columns">
 <%= form_for @task, url:{action: "create"} do |f| %>
   <p>
     <%= f.label :title %><br>
@@ -17,9 +17,9 @@
   </p>
  
   <p>
-    <%= f.submit %>
+    <button class = "button">Create</button>
   </p>
 <% end %>
-
+</div>
 <%= link_to 'Back', user_path(@user) %>
 
