--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -1,44 +1,44 @@
+
+
+
 <div class = "sign-in"> 
-<form>
-<div class="row">
-  <div class="small-3 columns">
- 
-    <%= form_for(:user, :url => {:controller => 'session', :action => 'login'}) do |f|%>
-        <%= f.email_field :email, :size => 70, placeholder: 'Email' %>
-        <%= f.password_field :password, :size => 70, placeholder: 'Password' %>
-          <% flash.each do |name, msg| %>
-          <%= content_tag :div, msg, class: name %>
-          <% end %>
-                <br>
-          <button class="button">Log in</button>
-          <% end %>
+    
+      <div class="small-3 columns">
+     
+        <%= form_for(:user, :url => {:controller => 'session', :action => 'login'}) do |f|%>
+            <%= f.email_field :email, :size => 70, placeholder: 'Email' %>
+            <%= f.password_field :password, :size => 70, placeholder: 'Password' %>
+                <% flash.each do |name, msg| %>
+                <%= content_tag :div, msg, class: name %>
+                <% end %>
+                  <button class="button">Log in</button>
+            <% end %>
+    </div>
 </div>
-</div>
-</form>
+<br>
+<div class="signupbutton">
+  <button class="button" id="sign_in">Sign up</button>
 </div>
 
-<div class = "signupbutton">
-<button class="button" id="sign_in">Sign up</button>
+
+
+<div class="front_page_image">
 </div>  
 
-<div class = "sign-up"> 
-
-<form>
-  <div class="row">
-    <div class="small-3 columns">
-
- <%= form_for(:user, :url => {:controller => 'user', :action => 'create'}) do |f|%>
-    <%= f.text_field :username, :size => 70, placeholder: 'Username' %>
-    <%= f.text_field :phone, :size => 70, placeholder: 'phone' %>
-    <%= f.email_field :email, :size => 70, placeholder: 'Email' %>
-    <%= f.password_field :password, :size => 70, placeholder: 'Password' %>
-    <%= f.password_field :password_confirmation, :size => 70, placeholder: 'Confim Password' %>
-    <% flash.each do |name, msg| %>
-          <%= content_tag :div, msg, class: name %>
-          <% end %>
-    <button class="button">Sign up</button>
-    <% end %>
-  </div>
+<div class = "sign-up">
+          <div class="small-3 columns">
+            <%= form_for(:user, :url => {:controller => 'user', :action => 'create'}) do |f|%>
+              <%= f.text_field :username, :size => 70, placeholder: 'Username' %>
+              <%= f.text_field :phone, :size => 70, placeholder: 'phone' %>
+              <%= f.email_field :email, :size => 70, placeholder: 'Email' %>
+              <%= f.password_field :password, :size => 70, placeholder: 'Password' %>
+              <%= f.password_field :password_confirmation, :size => 70, placeholder: 'Confirm Password' %>
+              
+                <% flash.each do |name, msg| %>
+                    <%= content_tag :div, msg, class: name %>
+                <% end %>
+              <button class="button">Sign up</button>
+        <% end %>
+    </div>
 </div>
-</form>
-</div>
+
