--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -18,7 +18,6 @@
 </table>
 
 
-
+<button class = "button">
 <%= link_to 'New task', new_user_task_path(@user)%>
-
-<!-- link_to user_task_path(@user) -->
+</button>
